--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">55,174</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">99,767</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">ContactsModule.ContactScenariosTest</td><td><a href="#m0">Create_Orgwith_Cont</a></td><td rowspan="1">1754041680828</td><td rowspan="1">45445</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">OrganizationModule.OrgScenariosTest</td><td><a href="#m0">CreateOrg_IndTypeTest</a></td><td rowspan="1">1754051492518</td><td rowspan="1">23561</td></tr><tr class="passedeven"><td><a href="#m1">createNewOrgTest</a></td><td rowspan="1">1754051522958</td><td rowspan="1">19672</td></tr><tr class="passedeven"><td><a href="#m2">creteOrg_Phno_Test</a></td><td rowspan="1">1754051549953</td><td rowspan="1">31262</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">ContactsModule.ContactScenariosTest#Create_Orgwith_Cont</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">Create_Orgwith_Cont Test Execution started<br/>Create_Orgwith_Cont Test Execution Success</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">OrganizationModule.OrgScenariosTest#CreateOrg_IndTypeTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">CreateOrg_IndTypeTest Test Execution started<br/>CreateOrg_IndTypeTest Test Execution Success</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">OrganizationModule.OrgScenariosTest#createNewOrgTest</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">createNewOrgTest Test Execution started<br/>createNewOrgTest Test Execution Success</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">OrganizationModule.OrgScenariosTest#creteOrg_Phno_Test</h3><table class="result"><tr><th>Messages</th></tr><tr><td><div class="messages">creteOrg_Phno_Test Test Execution started<br/>creteOrg_Phno_Test Test Execution Success</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
