--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\Hp\AppData\Local\Temp\testng-eclipse--685794817\testng-customsuite.xml</span>
+                    <span>C:\Users\Hp\AppData\Local\Temp\testng-eclipse--791032199\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -60,7 +60,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="group-Default_suite" class="navigator-link ">
-                    <span>1 group</span>
+                    <span>2 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,7 +103,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="ContactsModule.ContactScenariosTest" class="method navigator-link" hash-for-method="Create_Orgwith_Cont">Create_Orgwith_Cont</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="OrganizationModule.OrgScenariosTest" class="method navigator-link" hash-for-method="CreateOrg_IndTypeTest">CreateOrg_IndTypeTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="OrganizationModule.OrgScenariosTest" class="method navigator-link" hash-for-method="createNewOrgTest">createNewOrgTest</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="OrganizationModule.OrgScenariosTest" class="method navigator-link" hash-for-method="creteOrg_Phno_Test">creteOrg_Phno_Test</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +131,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">ContactsModule.ContactScenariosTest</span>
+              <span class="class-name">OrganizationModule.OrgScenariosTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="Create_Orgwith_Cont">
-                  </a> <!-- Create_Orgwith_Cont -->
-                  <span class="method-name">Create_Orgwith_Cont</span>
+                  <a name="CreateOrg_IndTypeTest">
+                  </a> <!-- CreateOrg_IndTypeTest -->
+                  <span class="method-name">CreateOrg_IndTypeTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="createNewOrgTest">
+                  </a> <!-- createNewOrgTest -->
+                  <span class="method-name">createNewOrgTest</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="creteOrg_Phno_Test">
+                  </a> <!-- creteOrg_Phno_Test -->
+                  <span class="method-name">creteOrg_Phno_Test</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +160,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Hp\AppData\Local\Temp\testng-eclipse--685794817\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Hp\AppData\Local\Temp\testng-eclipse--791032199\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +169,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;ContactsModule.ContactScenariosTest&quot;&gt;
-        &lt;methods&gt;
-          &lt;include name=&quot;Create_Orgwith_Cont&quot;/&gt;
-        &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- ContactsModule.ContactScenariosTest --&gt;
+      &lt;class name=&quot;OrganizationModule.OrgScenariosTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -177,7 +197,19 @@
               <span class="test-group-name">reg</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">Create_Orgwith_Cont</span>
+                <span class="method-in-group-name">CreateOrg_IndTypeTest</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">creteOrg_Phno_Test</span>
+                <br/>
+              </div> <!-- method-in-group -->
+            </div> <!-- test-group -->
+            <div class="test-group">
+              <span class="test-group-name">smoke</span>
+              <br/>
+              <div class="method-in-group">
+                <span class="method-in-group-name">createNewOrgTest</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -197,16 +229,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Create_Orgwith_Cont')
-data.setCell(0, 2, 'ContactsModule.ContactScenariosTest')
-data.setCell(0, 3, 45445);
+data.setCell(0, 1, 'creteOrg_Phno_Test')
+data.setCell(0, 2, 'OrganizationModule.OrgScenariosTest')
+data.setCell(0, 3, 31262);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'CreateOrg_IndTypeTest')
+data.setCell(1, 2, 'OrganizationModule.OrgScenariosTest')
+data.setCell(1, 3, 23561);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'createNewOrgTest')
+data.setCell(2, 2, 'OrganizationModule.OrgScenariosTest')
+data.setCell(2, 3, 19672);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 45 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -218,28 +258,33 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="reporter-method-div">
-              <span class="reporter-method-name">Create_Orgwith_Cont</span>
+              <span class="reporter-method-name">CreateOrg_IndTypeTest</span>
               <div class="reporter-method-output-div">
-                <span class="reporter-method-output">Create_Orgwith_Cont Test Execution started</span>
-                <span class="reporter-method-output">Create_Orgwith_Cont Test Execution Success</span>
+                <span class="reporter-method-output">CreateOrg_IndTypeTest Test Execution started</span>
+                <span class="reporter-method-output">CreateOrg_IndTypeTest Test Execution Success</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">creteOrg_Phno_Test</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">creteOrg_Phno_Test Test Execution started</span>
+                <span class="reporter-method-output">creteOrg_Phno_Test Test Execution Success</span>
+              </div> <!-- reporter-method-output-div -->
+            </div> <!-- reporter-method-div -->
+            <div class="reporter-method-div">
+              <span class="reporter-method-name">createNewOrgTest</span>
+              <div class="reporter-method-output-div">
+                <span class="reporter-method-output">createNewOrgTest Test Execution started</span>
+                <span class="reporter-method-output">createNewOrgTest Test Execution Success</span>
               </div> <!-- reporter-method-output-div -->
             </div> <!-- reporter-method-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">2 ignored methods</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">ContactsModule.ContactScenariosTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">CreateNewContTest</span>
-                <br/>
-                <span class="ignored-method-name">ContactWithSupportDate</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -248,42 +293,66 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">ContactsModule.ContactScenariosTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">OrganizationModule.OrgScenariosTest</div> <!-- chronological-class-name -->
               <div class="configuration-suite before">
                 <span class="method-name">getConnectionToDB</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-test before">
                 <span class="method-name">conParallelExe</span>
-                <span class="method-start">529 ms</span>
+                <span class="method-start">545 ms</span>
               </div> <!-- configuration-test before -->
               <div class="configuration-class before">
                 <span class="method-name">launchTheBrowser</span>
-                <span class="method-start">553 ms</span>
+                <span class="method-start">569 ms</span>
               </div> <!-- configuration-class before -->
               <div class="configuration-method before">
                 <span class="method-name">login</span>
-                <span class="method-start">2300 ms</span>
+                <span class="method-start">3213 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">Create_Orgwith_Cont</span>
-                <span class="method-start">8586 ms</span>
+                <span class="method-name">CreateOrg_IndTypeTest</span>
+                <span class="method-start">8288 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
                 <span class="method-name">logout</span>
-                <span class="method-start">54042 ms</span>
+                <span class="method-start">31861 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">login</span>
+                <span class="method-start">34401 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">createNewOrgTest</span>
+                <span class="method-start">38728 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">logout</span>
+                <span class="method-start">58412 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">login</span>
+                <span class="method-start">64564 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <span class="method-name">creteOrg_Phno_Test</span>
+                <span class="method-start">65723 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">logout</span>
+                <span class="method-start">96998 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-class after">
                 <span class="method-name">closeTheBrowser</span>
-                <span class="method-start">55458 ms</span>
+                <span class="method-start">99968 ms</span>
               </div> <!-- configuration-class after -->
               <div class="configuration-test after">
                 <span class="method-name">closeParallelExe</span>
-                <span class="method-start">55696 ms</span>
+                <span class="method-start">100303 ms</span>
               </div> <!-- configuration-test after -->
               <div class="configuration-suite after">
                 <span class="method-name">closeConnectionwithDB</span>
-                <span class="method-start">55727 ms</span>
+                <span class="method-start">100337 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
